--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -21,11 +21,12 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout repository
-        uses: s4u/setup-maven-action@v1.11.0
+        uses: actions/checkout@v4
+      - name: Setup java
+        uses: actions/setup-java@v4
         with:
-          java-distribution: 'temurin'
+          distribution: 'temurin'
           java-version: ${{ matrix.java }}
-          maven-version: ${{ matrix.maven }}
       - name: Create report file
         run: |
           timestamp=$(date +"%Y%m%d-%H%M")
