--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -27,6 +27,9 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: ${{ matrix.java }}
+      - uses: s4u/maven-settings-action@v3.0.0
+        with:
+          servers: '[{"id": "serverId", "username": "username", "password": "password"}]'
       - name: Create report file
         run: |
           timestamp=$(date +"%Y%m%d-%H%M")
