--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -27,9 +27,11 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: ${{ matrix.java }}
+      - run: cat "/home/runner/.m2/settings.xml"
       - uses: s4u/maven-settings-action@v3.0.0
         with:
           servers: '[{"id": "serverId", "username": "username", "password": "password"}]'
+      - run: cat "/home/runner/.m2/settings.xml"
       - name: Create report file
         run: |
           timestamp=$(date +"%Y%m%d-%H%M")
